// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter redux Actions decrements the count 1`] = `
Object {
  "count": -2,
}
`;

exports[`Counter redux Actions increments the count 1`] = `
Object {
  "count": 2,
}
`;
